--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link href="/stylesheets/bootstrap.css" rel="stylesheet"/>
-<link href="/stylesheets/site.css" rel="stylesheet"/>
-<link href="/stylesheets/open-iconic-bootstrap.css" rel="stylesheet"/>
+    <link href="/Content/bootstrap.css" rel="stylesheet"/>
+<link href="/Content/site.css" rel="stylesheet"/>
+<link href="/Content/open-iconic-bootstrap.css" rel="stylesheet"/>
 
     <script src="/Scripts/modernizr-2.6.2.js"></script>
 
